# wiremock-community-analytics

./: .gitignore  README.md  docker-compose.yml  grimoirelab.Dockerfile
scripts/: generate-projects-json  run-sirmordred
settings/: aliases.json  credentials.cfg.template  orgs_file.json  projects.json  projects.json.template  setup.cfg  setup.cfg.template
