[general]
short_name = GrimoireLab
update = true
min_update_delay = 60
debug = false
logs_dir = /home/grimoire/logs
bulk_size = 100
scroll_size = 100
aliases_file = /home/grimoire/aliases.json

[projects]
projects_file = /home/grimoire/conf/projects.json

[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
autorefresh = true

[sortinghat]
host = nginx
user = root
password = root
port = 8000
path = /identities/api/
ssl = false
database = sortinghat_db
autoprofile = [github, git]
matching = [email,name,username]
sleep_for = 100
unaffiliated_group = Unknown
affiliate = true

[panels]
kibiter_time_from = now-90d
kibiter_default_index = git
kibiter_url = http://kibiter:5601
kibiter_version = 6.8.6-3

[phases]
collection = true
identities = true
enrichment = true
panels = true

#####
#
# Git (but not GitHub, see below)
#
#####
[git]
raw_index = git_demo_raw
enriched_index = git_demo_enriched
latest-items = true
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]

[enrich_demography:git]

[enrich_areas_of_code:git]
in_index = git_demo_raw
out_index = git-aoc_demo_enriched

[enrich_onion:git]
in_index = git
out_index = git-onion_demo_enriched
contribs_field = hash


###
# Repos, Issues and Pull requests
###
[github]
# Names for raw and enriched indexes
raw_index = github_grimoirelab-raw
enriched_index = github_grimoirelab
api-token = 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
# Sleep it GitHub API rate is exhausted, waited until it is recovered
sleep-for-rate = true

[github:repo]
raw_index = github-repo_raw
enriched_index = github-repo_enriched
api-token = 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
category = repository
sleep-for-rate = true
no-archive = true
studies = [enrich_demography:github]

[github:pull]
raw_index = github-pull_raw
enriched_index = github-pull_enriched
api-token = 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
category = pull_request
sleep-for-rate = true
no-archive = true
studies = [enrich_geolocation:user,
           enrich_geolocation:assignee,
           enrich_demography:github]

[github:issue]
raw_index = github_raw
enriched_index = github_enriched
api-token = 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
category = issue
sleep-for-rate = true
no-archive = true
studies = [enrich_onion:github,
           enrich_geolocation:user,
           enrich_geolocation:assignee,
           enrich_backlog_analysis,
           enrich_demography:github]

[enrich_onion:github]
in_index_iss = github_issues_onion-src
in_index_prs = github_prs_onion-src
out_index_iss = github-issues-onion_enriched
out_index_prs = github-prs-onion_enriched

[enrich_backlog_analysis]
out_index = github_enrich_backlog
interval_days = 7
reduced_labels = [bug,enhancement]
map_label = [others, bugs, enhancements]

[enrich_demography:github]

[enrich_geolocation:user]
location_field = user_location
geolocation_field = user_geolocation

[enrich_geolocation:assignee]
location_field = assignee_location
geolocation_field = assignee_geolocation

[enrich_feelings]
attributes = [title, body]
nlp_rest_url = http://localhost:2901

###
# Comments
###

[github2:pull]
api-token = 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
raw_index = github2-pull_raw
enriched_index = github2-pull_enriched
sleep-for-rate = true
category = pull_request
no-archive = true
studies = [enrich_geolocation:user, enrich_geolocation:assignee, enrich_feelings]

[github2:issue]
api-token = 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
raw_index = github2-issues_raw
enriched_index = github2-issues_enriched
sleep-for-rate = true
category = issue
no-archive = true
studies = [enrich_geolocation:user, enrich_geolocation:assignee, enrich_feelings]




#[stackexchange]
#raw_index = stackexchange_demo_raw
#enriched_index = stackexchange_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true

#[slack]
#raw_index = slack_demo_raw
#enriched_index = slack_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true

#[twitter]
#raw_index = twitter_demo_raw
#enriched_index = twitter_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true
#sleep-for-rate = true
#sleep-time = 300

